Bunches of theming updates and improvements to how drag/drop works in the view selector panels.

--- a/Source/WPF/MyMoney/Controls/PasswordControl.xaml
+++ b/Source/WPF/MyMoney/Controls/PasswordControl.xaml
@@ -10,12 +10,12 @@
         <PasswordBox x:Name="PasswordField" PasswordChanged="OnPasswordChanged" 
                      Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinWidth="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                 MinHeight="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                 MinHeight="{Binding Path=MinHeight, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
 
         <TextBox x:Name="PasswordTextBox" Visibility="Collapsed" 
                  Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType=UserControl}}"
                  MinWidth="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                 MinHeight="{Binding Path=MinWidth, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                 MinHeight="{Binding Path=MinHeight, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
     </Grid>
     
     
