--- a/Source/WPF/MyMoney/Dialogs/PasswordWindow.xaml
+++ b/Source/WPF/MyMoney/Dialogs/PasswordWindow.xaml
@@ -10,24 +10,24 @@
 
         <!-- Define a Drawing as a resource that can be used as content for a Tiled DrawingBrush to get the Blend backdop effect. -->
         <DrawingGroup x:Key="CheckerBoxBackground">
-            <GeometryDrawing Brush="#F5F5FF">
+            <GeometryDrawing Brush="{DynamicResource SystemControlBackgroundAltHighBrush}">
                 <!-- Brush="#2B3C59">-->
                 <GeometryDrawing.Geometry>
                     <RectangleGeometry Rect="0,0,1,1"/>
                 </GeometryDrawing.Geometry>
             </GeometryDrawing>
-            <GeometryDrawing Brush="#FFFFF5">
+            <GeometryDrawing Brush="{DynamicResource SystemControlBackgroundChromeMediumBrush}">
                 <!-- Dark-->
                 <GeometryDrawing.Geometry>
                     <RectangleGeometry Rect="1,0,1,1" />
                 </GeometryDrawing.Geometry>
             </GeometryDrawing>
-            <GeometryDrawing Brush="#F5F5FF">
+            <GeometryDrawing Brush="{DynamicResource SystemControlBackgroundAltHighBrush}">
                 <GeometryDrawing.Geometry>
                     <RectangleGeometry Rect="1,1,1,1" />
                 </GeometryDrawing.Geometry>
             </GeometryDrawing>
-            <GeometryDrawing Brush="#FFFFF5">
+            <GeometryDrawing Brush="{DynamicResource SystemControlBackgroundChromeMediumBrush}">
                 <!-- Dark-->
                 <GeometryDrawing.Geometry>
                     <RectangleGeometry Rect="0,1,1,1" />
@@ -36,16 +36,16 @@
         </DrawingGroup>
 
 
-        <Style TargetType="TextBox">
-            <Setter Property="Background" Value="LemonChiffon"/>
-            <Setter Property="MinWidth" Value="200"/>
-            <Setter Property="Height" Value="24"/>
+        <Style TargetType="TextBox" BasedOn="{StaticResource DefaultTextBoxStyle}">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="MinHeight" Value="24"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
         </Style>
 
         <Style TargetType="c:PasswordControl">
-            <Setter Property="Background" Value="LemonChiffon"/>
-            <Setter Property="MinWidth" Value="200"/>
-            <Setter Property="Height" Value="24"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="MinHeight" Value="26"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
         </Style>
     </Window.Resources>
     <Window.Background>
@@ -54,12 +54,6 @@
                        />
     </Window.Background>
     <Border>
-        <Border.Background>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                <GradientStop Offset="0" Color="#00000000"/>
-                <GradientStop Offset="1" Color="#20000000"/>
-            </LinearGradientBrush>
-        </Border.Background>
         <Grid Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -73,10 +67,10 @@
 
             <RichTextBox x:Name="TextBlockIntroMessage"  Grid.Row="0" Width="400"
                        VerticalAlignment="Center" Margin="0,0,0,10" Grid.ColumnSpan="2"
-                       BorderThickness="0" Background="Transparent">
+                       BorderThickness="0" Background="Transparent" Visibility="Visible">
                 <RichTextBox.Document>
                     <FlowDocument>
-                        <Paragraph>Please enter the password to use to protect your data</Paragraph>
+                        <Paragraph>Please enter the password to use to protect your data:</Paragraph>
                     </FlowDocument>
                 </RichTextBox.Document>
             </RichTextBox>
