--- a/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
@@ -1,11 +1,9 @@
-﻿<Window x:Class="Walkabout.Dialogs.BuildingDialog"
+﻿<dialog:BaseDialog x:Class="Walkabout.Dialogs.BuildingDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:dialog="clr-namespace:Walkabout.Dialogs"
-        Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
-        Foreground="{DynamicResource SystemControlPageTextBaseHighBrush}"
         Title="Rental Property" 
         MinHeight="430" MinWidth="400"  Width="500" 
         ShowInTaskbar="False"  
@@ -16,6 +14,11 @@
         >
 
     <Grid Name="MainDialogSurface" Margin="20,20,20,20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
@@ -165,4 +168,4 @@
         </StackPanel>
 
     </Grid>
-</Window>
+</dialog:BaseDialog>
