--- a/Source/WPF/MyMoney/Dialogs/MoneyFileImportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/MoneyFileImportDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Walkabout.Dialogs.MoneyFileImportDialog"
+﻿<local:BaseDialog x:Class="Walkabout.Dialogs.MoneyFileImportDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -53,4 +53,4 @@
         </ListView>
 
     </Grid>
-</Window>
+</local:BaseDialog>
