--- a/Source/WPF/MyMoney/Dialogs/RenamePayeeDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/RenamePayeeDialog.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="Walkabout.Dialogs.RenamePayeeDialog"
+﻿<d:BaseDialog x:Class="Walkabout.Dialogs.RenamePayeeDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Walkabout.Controls"
+        xmlns:d="clr-namespace:Walkabout.Dialogs"
         Title="Rename Payee" 
-        Height="328"
         Width="425"
         MinHeight="250"
         MinWidth="400"
+        SizeToContent="Height"
         ResizeMode="CanResizeWithGrip"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner" 
@@ -14,9 +15,9 @@
         FocusManager.FocusedElement="{Binding ElementName=comboBox1}">
 
     <Window.Resources>
-        <Style TargetType="{x:Type Button}">
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
             <Setter Property="MinWidth" Value="70" />
-            <Setter Property="Height" Value="25" />
+            <Setter Property="MinHeight" Value="30" />
         </Style>
     </Window.Resources>
 
@@ -27,12 +28,13 @@
                     <Style TargetType="{x:Type Grid}">
                         <Setter Property="Margin" Value="10" />
                     </Style>
-                    <Style TargetType="{x:Type Label}">
+                    <Style TargetType="{x:Type Label}" BasedOn="{StaticResource DefaultLabelStyle}">
                         <Setter Property="Margin" Value="0,5,5,2" />
-                        <Setter Property="Padding" Value="0,0,0,5" />
+                        <Setter Property="Padding" Value="0,0,10,0" />
+                        <Setter Property="VerticalAlignment" Value="Center"/>
                     </Style>
-                    <Style TargetType="{x:Type TextBox}">
-                        <Setter Property="Margin" Value="0,0,0,5" />
+                    <Style TargetType="{x:Type TextBox}"  BasedOn="{StaticResource DefaultTextBoxStyle}">
+                        <Setter Property="Margin" Value="0,0,0,10" />
                         <Setter Property="VerticalAlignment" Value="Center"/>
                         <Style.Triggers>
                             <Trigger Property="Validation.HasError" Value="true">
@@ -41,8 +43,8 @@
                         </Style.Triggers>
                     </Style>
 
-                    <Style TargetType="{x:Type local:ComboBox2}">
-                        <Setter Property="Margin" Value="0,0,0,5" />
+                    <Style TargetType="{x:Type local:ComboBox2}"  BasedOn="{StaticResource DefaultComboBoxStyle}">
+                        <Setter Property="Margin" Value="0,0,0,10" />
                         <Setter Property="VerticalAlignment" Value="Center"/>
                     </Style>
                 </Grid.Resources>
@@ -54,54 +56,37 @@
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
 
-                    <RowDefinition Height="20" />
-
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="20" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
-                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <!-- FROM -->
                 <Label Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right">_From:</Label>
 
-
-                <Grid Grid.Column="1" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-
-                    <TextBox Name="textBox1"  />
-                    <CheckBox Name="checkBoxUseRegex" Grid.Row="1">Use regular expressions</CheckBox>
-                </Grid>
+                <TextBox Name="textBox1" Grid.Row="0" Grid.Column="1" />
+                <CheckBox Name="checkBoxUseRegex" Grid.Row="1" Grid.Column="1" >Use regular expressions</CheckBox>
 
 
                 <!-- TO -->
                 <Label Grid.Column="0" Grid.Row="2"  HorizontalAlignment="Right">_To:</Label>
 
-                <Grid Grid.Column="1" Grid.Row="2" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+                <local:ComboBox2 x:Name="comboBox1"  Grid.Row="2"  Grid.Column="1"  HorizontalAlignment="Stretch"
+                                 TextChanged="OnComboBox1_TextChanged"  IsEditable="True" IsTextSearchCaseSensitive="True">
+                    <ComboBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel />
+                        </ItemsPanelTemplate>
+                    </ComboBox.ItemsPanel>
+                </local:ComboBox2>
 
-                    <local:ComboBox2 x:Name="comboBox1" TextChanged="OnComboBox1_TextChanged"  IsEditable="True" IsTextSearchCaseSensitive="True">
-                        <ComboBox.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <VirtualizingStackPanel />
-                            </ItemsPanelTemplate>
-                        </ComboBox.ItemsPanel>
-                    </local:ComboBox2>
-
-                    <Button Name="CamelCaseButton" Grid.Column="1" Grid.Row="1" Click="CamelCaseButton_Click"  IsDefault="True" HorizontalAlignment="Left" >Camel Case</Button>
-                </Grid>
-
-
+                <Button Name="CamelCaseButton" Grid.Row="3" Grid.Column="1" Click="CamelCaseButton_Click"  IsDefault="True" HorizontalAlignment="Left" >Camel Case</Button>
+           
                 <!-- ON GOING -->
-                <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Padding="4" BorderBrush="Gray" BorderThickness="0,2,0,0">
+                <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="4" Margin="0,20,0,0" Padding="4" BorderBrush="Gray" BorderThickness="0,2,0,0">
                     <CheckBox Name="checkBoxAuto">
                         Auto-Rename ( make this an ongoing rename )
                     </CheckBox>
@@ -112,9 +97,9 @@
 
         <!-- OK or Cancel -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Margin="10,0,10,10">
-            <Button Name="okButton" IsDefault="True" Margin="0,0,5,0">OK</Button>
+            <Button Name="okButton" IsDefault="True" Margin="0,0,10,0">OK</Button>
             <Button Name="cancelButton" IsCancel="True">Cancel</Button>
         </StackPanel>
     </DockPanel>
 
-</Window>
+</d:BaseDialog>
