--- a/Source/WPF/MyMoney/Themes/Light.xaml
+++ b/Source/WPF/MyMoney/Themes/Light.xaml
@@ -20,7 +20,8 @@
     <!-- colors for list selection -->
     <SolidColorBrush x:Key="ListItemForegroundBrush" Color="black"/>
     <SolidColorBrush x:Key="ListItemSelectedForegroundBrush" Color="white"/>
-    <SolidColorBrush x:Key="ListItemSelectedBackgroundBrush" Color="{m:DynamicColor SystemAccentColor}"/>
+    <SolidColorBrush x:Key="ListItemSelectedBackgroundBrush" Color="{m:DynamicColor SystemAccentColor}"  Opacity="0.6"/>
+    <SolidColorBrush x:Key="ListItemSelectedBackgroundMouseOverBrush" Color="{m:DynamicColor SystemAccentColor}" Opacity="0.8"/>
     <SolidColorBrush x:Key="ListItemSelectedBorderBrush" Color="Transparent"/>
     <SolidColorBrush x:Key="ListItemSelectedHoverBrush" Color="#F0F0F0"/>
 
@@ -46,5 +47,8 @@
     <Color x:Key="TriangleExpanderIconColor">#33000000</Color>
     <Color x:Key="TriangleExpanderIconMouseOverColor">#2C5BC1</Color>
     <Color x:Key="TriangleExpanderIconPressedColor">#00A7FF</Color>
-    
+
+    <!-- drag drop feedback addorner brush -->
+    <SolidColorBrush x:Key="DragDropFeedbackBrush" Color="{m:DynamicColor SystemAccentColor}"/>
+
 </ResourceDictionary>
