--- a/Source/WPF/MyMoney/Dialogs/TaxReportDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/TaxReportDialog.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Walkabout.Dialogs.TaxReportDialog"
+﻿<local:BaseDialog x:Class="Walkabout.Dialogs.TaxReportDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:Walkabout.Dialogs"
         Title="Tax Report Options" mc:Ignorable="d" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         d:DesignHeight="250" d:DesignWidth="300"
@@ -22,7 +23,7 @@
         </Grid.RowDefinitions>
         <TextBlock Margin="10,10,10,0" Text="Please enter the year of the report:" x:Name="Prompt" />
 
-        <TextBox Margin="10,0,10,5" x:Name="YearText" Grid.Row="1" Background="LemonChiffon" TextChanged="YearText_TextChanged"/>
+        <TextBox Margin="10,0,10,5" x:Name="YearText" Grid.Row="1" TextChanged="YearText_TextChanged"/>
 
         <StackPanel Margin="10,5,10,5"  Grid.Row="2" Orientation="Horizontal">
             <TextBlock Text="Fiscal Start Month: " Background="Transparent" VerticalAlignment="Center"/>
@@ -42,10 +43,10 @@
         <CheckBox Margin="10,5,10,5" x:Name="CapitalGainsOnlyCheckBox" Grid.Row="4">Capital Gains Only</CheckBox>
 
         <StackPanel Margin="10,20,10,5" Orientation="Horizontal" Grid.Row="6"  HorizontalAlignment="Right">
-            <Button Margin="5,0,5,0" MinWidth="50" IsDefault="True" x:Name="OK" Click="OK_Click">_Ok</Button>
-            <Button Margin="5,0,5,0" MinWidth="50" IsCancel="True" x:Name="Cancel" Click="Cancel_Click">_Cancel</Button>
+            <Button Margin="5,0,5,0" MinWidth="70" IsDefault="True" x:Name="OK" Click="OK_Click">_Ok</Button>
+            <Button Margin="5,0,5,0" MinWidth="70" IsCancel="True" x:Name="Cancel" Click="Cancel_Click">_Cancel</Button>
         </StackPanel>
     </Grid>
-</Window>
+</local:BaseDialog>
 
   
