--- a/Source/WPF/MyMoney/Dialogs/SelectAccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/SelectAccountDialog.xaml
@@ -1,7 +1,8 @@
-﻿<Window x:Class="Walkabout.Dialogs.SelectAccountDialog"
+﻿<d:BaseDialog x:Class="Walkabout.Dialogs.SelectAccountDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:localData="clr-namespace:Walkabout.Data"
+		xmlns:d="clr-namespace:Walkabout.Dialogs"
         xmlns:c="clr-namespace:Walkabout.WpfConverters"
         Title="Select Account" Height="400" MinHeight="400" Width="500" MinWidth="500" 
         >
@@ -17,11 +18,11 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Text="{Binding Name}" Grid.Column="0" FontWeight="DemiBold"
-                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=Gray}"/>
+                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=SystemControlPageTextBaseHighBrush+SystemControlDisabledBaseMediumLowBrush}"/>
                 <TextBlock Text="{Binding AccountId}" Grid.Column="1" TextAlignment="Right" Margin="8,0,0,0" Opacity=".8"
-                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=Gray}"/>
+                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=SystemControlPageTextBaseHighBrush+SystemControlDisabledBaseMediumLowBrush}"/>
                 <TextBlock Text="{Binding Balance, StringFormat={}{0:C}}" Grid.Column="2" TextAlignment="Right" Margin="8,0,0,0" Opacity=".6"
-                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=Gray}"/>
+                           Foreground="{Binding IsClosed, Converter={StaticResource BoolToBrushConverter}, ConverterParameter=SystemControlPageTextBaseHighBrush+SystemControlDisabledBaseMediumLowBrush}"/>
                 
             </Grid>
         </DataTemplate>
@@ -36,22 +37,22 @@
 
         <StackPanel >
             <TextBlock x:Name="TextBlockPrompt" Text="We found a reference to an unknown account number. Please select the account that you want to use or click the Add New Account button at the bottom of this window:"
-                           TextWrapping="Wrap"/>
+                           TextWrapping="Wrap" Margin="0,0,0,10"/>
         </StackPanel>
         
         <ListBox x:Name="ListBoxAccounts" Grid.Row="1" BorderThickness="1"  Grid.IsSharedSizeScope="True"
                  SelectionChanged="ListBoxAccounts_SelectionChanged"/>
 
-        <Grid  Grid.Row="2" >
+        <Grid  Grid.Row="2" Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="ButtonAdd" MinWidth="80" MinHeight="25" Margin="3" Padding="5,2" Click="ButtonAdd_Click">_Add new account</Button>
-            <Button x:Name="ButtonOk" Grid.Column="2" IsDefault="true" MinWidth="80" MinHeight="25" Padding="5,2" Margin="3" Click="ButtonOk_Click">_OK</Button>
-            <Button x:Name="ButtonCancel" Grid.Column="3" IsCancel="true" MinWidth="80" MinHeight="25" Padding="5,2" Margin="3" Click="ButtonCancel_Click" ToolTip="Cancel the entire import.">_Cancel</Button>
+            <Button x:Name="ButtonAdd" MinWidth="80" MinHeight="30" Margin="3" Padding="5,2" Click="ButtonAdd_Click">_Add new account</Button>
+            <Button x:Name="ButtonOk" Grid.Column="2" IsDefault="true" MinWidth="80" MinHeight="30" Padding="5,2" Margin="3" Click="ButtonOk_Click">_OK</Button>
+            <Button x:Name="ButtonCancel" Grid.Column="3" IsCancel="true" MinWidth="80" MinHeight="30" Padding="5,2" Margin="3" Click="ButtonCancel_Click" ToolTip="Cancel the entire import.">_Cancel</Button>
         </Grid>
     </Grid>
-</Window>
+</d:BaseDialog>
