--- a/Source/WPF/MyMoney/Controls/RoundedButton.xaml
+++ b/Source/WPF/MyMoney/Controls/RoundedButton.xaml
@@ -4,15 +4,15 @@
              xmlns:c="clr-namespace:Walkabout.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             Background="{DynamicResource ButtonNormalBackground}" 
-             BorderBrush="{DynamicResource ButtonNormalBorder}" 
-             Foreground="{DynamicResource ButtonNormalForeground}" 
-             MousePressedBackground="{DynamicResource ButtonMousePressedBackground}" 
-             MousePressedBorder="{DynamicResource ButtonMousePressedBorder}" 
-             MousePressedForeground="{DynamicResource ButtonMousePressedForeground}" 
-             MouseOverBackground="{DynamicResource ButtonMouseOverBackground}" 
-             MouseOverBorder="{DynamicResource ButtonMouseOverBorder}" 
-             MouseOverForeground="{DynamicResource ButtonMouseOverForeground}" 
+             Background="{DynamicResource ButtonBackground}" 
+             BorderBrush="{DynamicResource ButtonBorderBrush}" 
+             Foreground="{DynamicResource ButtonForeground}" 
+             MousePressedBackground="{DynamicResource ButtonBackgroundPressed}" 
+             MousePressedBorder="{DynamicResource ButtonBorderBrushPressed}" 
+             MousePressedForeground="{DynamicResource ButtonForegroundPressed}" 
+             MouseOverBackground="{DynamicResource ButtonBackgroundPointerOver}" 
+             MouseOverBorder="{DynamicResource ButtonBorderBrushPointerOver}" 
+             MouseOverForeground="{DynamicResource ButtonForegroundPointerOver}" 
              mc:Ignorable="d" 
              d:DesignHeight="16" d:DesignWidth="16">
     <Button.Template>
