--- a/Source/WPF/MyMoney/View Selectors/PayeesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/PayeesControl.xaml
@@ -22,11 +22,12 @@
                  AllowDrop="True"
                  Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
-        
+
         <ListBox.ItemContainerStyle>
-            <Style TargetType="ListBoxItem">
+            <Style TargetType="ListBoxItem" BasedOn="{StaticResource DefaultListBoxItemStyle}">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Padding" Value="10,5"/>
             </Style>
         </ListBox.ItemContainerStyle>
 
