--- a/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
@@ -26,11 +26,12 @@
                  Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
                  AllowDrop="True"
                  >
-        
+
         <ListBox.ItemContainerStyle>
-            <Style TargetType="ListBoxItem">
+            <Style TargetType="ListBoxItem" BasedOn="{StaticResource DefaultListBoxItemStyle}">
                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                 <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="Padding" Value="10,5"/>
             </Style>
         </ListBox.ItemContainerStyle>
         
